--- a/it/howtos/priorview.html
+++ b/it/howtos/priorview.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Howto - The "Priorview" preview utility - OmegaT</title>
+  <title>Guida - L'utilità di anteprima "Priorview" - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="/it/assets/omegat.js"></script>
 
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT è un'applicazione di memoria di traduzione gratuita per traduttori professionisti scritta in Java.">
 
   <link rel="canonical" href="http://omegat.org/it/howtos/priorview">
 
@@ -42,10 +42,10 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Howto - The "Priorview" preview utility - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:title"       content="Guida - L'utilità di anteprima "Priorview" - OmegaT" />
+  <meta property="og:description" content="OmegaT è un'applicazione di memoria di traduzione gratuita per traduttori professionisti scritta in Java." />
   <meta property="og:url"         content="http://omegat.org/it/howtos/priorview" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT - lo strumento gratuito per memorie di traduzione" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -55,8 +55,8 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/it",
-    "headline": "Howto - The "Priorview" preview utility",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "headline": "Guida - L'utilità di anteprima "Priorview"",
+    "description": "OmegaT è un'applicazione di memoria di traduzione gratuita per traduttori professionisti scritta in Java.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -88,17 +88,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/it/download">Scaricare OmegaT</a></li>
+        <li><a href="/it/download">Scarica</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/it/resources">Altre risorse OmegaT</a></li>
+        <li><a href="/it/resources">Risorse</a></li>
         <li><a href="/it/documentation">Documentazione</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Lingue<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -169,15 +169,15 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-howtos-priorview"><h1>Howto - The "Priorview" preview utility</h1></div>
+    <div class="jumbotron jumbo-page titles-howtos-priorview"><h1>Guida - L'utilità di anteprima "Priorview"</h1></div>
         
-    <div class="container">
+    
+<div class="container">
 
-<h2>Guida: L'utilità di anteprima &quot;Priorview&quot;</h2>
 
 <h3>Premesse e principi</h3>
 
-<p>Priorview è una piccola utilità che fornisce una funzione di anteprima per OmegaT. Per le premesse e i principi, consultare la <a href="./preview.html">Guida all'anteprima</a>. Questa guida descrive l'uso di Priorview per <b>Windows e Linux</b>. Se si utilizza Mac OSX, è possibile <a href="/files/priorview_for_mac.zip">scaricare una versione di Priorview per Mac qui</a>. La versione Mac OSX non è ancora documentata e le seguenti informazioni <b>non</b> si applicano ad essa.</p>
+<p>Priorview è una piccola utilità che fornisce una funzione di anteprima per OmegaT. Per le premesse e i principi, consultare la <a href="preview.html">Guida all'anteprima</a>. Questa guida descrive l'uso di Priorview per <b>Windows e Linux</b>. Se si utilizza Mac OSX, è possibile <a href="/files/priorview_for_mac.zip">scaricare una versione di Priorview per Mac qui</a>. La versione Mac OSX non è ancora documentata e le seguenti informazioni <b>non</b> si applicano ad essa.</p>
 
 <h3>Software richiesto</h3>
 
@@ -189,7 +189,7 @@
 
 <li><a href="http://www.opera.com">Opera</a><br/>oppure</li>
 
-<li><a href="http://www.mozilla.org">Firefox</a> insieme con <a href="http://addons.mozilla.org/de/firefox/addon/reloadevery/">il componente aggiuntivo &quot;ReloadEvery&quot; per Firefox</a><br/> Installare prima Firefox (se non è già installato), poi ReloadEvery.</li>
+<li><a href="http://www.mozilla.org">Firefox</a> insieme con <a href="http://addons.mozilla.org/de/firefox/addon/reloadevery/">il componente aggiuntivo "ReloadEvery" per Firefox</a><br/> Installare prima Firefox (se non è già installato), poi ReloadEvery.</li>
 
 <li><i>(Scaricare dai collegamenti forniti; gli utenti Linux potrebbero preferire installarlo dagli archivi della loro distribuzione, laddove questo sia possibile)</i></li>
 
@@ -211,7 +211,7 @@
 
 <p>4. <b><a href="/files/priorview.zip">Priorview</a></b></p>
 
-<p>Per installare Priorview, basta scompattare l'archivio zip in qualsiasi luogo adatto sul tuo disco rigido. Per il lancio di Priorview, aprire un prompt dei comandi/terminale/console e digitare:</p>
+<p>Per installare Priorview, basta scompattare l'archivio zip in qualsiasi luogo adatto sul tuo disco rigido. Per avviare Priorview, aprire un prompt dei comandi/terminale/console e digitare:</p>
 
 <p>cd <i>percorso</i></p>
 
@@ -233,7 +233,7 @@
 
 <li>la frequenza con cui lo script deve verificare se questo file è stato modificato (intervallo di polling);</li>
 
-<li>l'utilità di conversione file che si è installato.</li>
+<li>l'utilità di conversione file che si è installata.</li>
 
 </ul>
 
@@ -251,11 +251,11 @@
 
 </ul>
 
-<p>Una volta avviato Priorview, tuttavia, non è possibile selezionare un browser o un utilità di conversione differente; queste opzioni sono dunque nascoste dopo l'avvio. Per selezionare un browser o un'utilità di conversione diversa, è necessario chiudere Priorview e riavviarlo.</p>
+<p>Una volta avviato Priorview, tuttavia, non è possibile selezionare un browser o un'utilità di conversione differente; queste opzioni sono dunque nascoste dopo l'avvio. Per selezionare un browser o un'utilità di conversione diversa, è necessario chiudere Priorview e riavviarlo.</p>
 
 <p>Il pulsante Esci chiude Priorview ed elimina anche i file temporanei creati (altri metodi di chiusura di Priorview non elimineranno i file temporanei).</p>
 
-<p><img src="/img/preview_ss.png" alt="preview_ss.png"/></p>
+<p><img src="/img/preview_ss.png" alt="preview_ss.png"></img></p>
 
 <p><i>Un comunicato stampa della Commissione europea (in formato .odt) in OmegaT e, più sotto, il testo tradotto istantaneo visualizzato in Opera. In basso a destra: l'utilità Priorview. Il layout mostrato qui è giusto per esempio; è possibile, ovviamente, disporre le finestre, a piacimento.</i></p>
 
@@ -264,7 +264,7 @@
 
 <p>Se il percorso della posizione del priorview.tcl contiene spazi, metterlo tra virgolette, ad esempio:</p>
 
-<p>cd &quot;C:\Miei file\priorview&quot;</p>
+<p>cd "C:\Miei file\priorview"</p>
 
 <p>Se Priorview non si avvia:</p>
 
@@ -280,7 +280,7 @@
 
 <li>Di essersi ricordati di aver premuto Ctrl+S, Ctrl+D in OmegaT. Se non lo si fa, non ci sarà alcuna modifica da individuare/mostrare!</li>
 
-<li>Che l'utilità di conversione di file sia installata correttamente e stia funzionando. Questo è possibile verificarlo con l'appropriato comando nella riga di comando (terminale/console/prompt di DOS). In ogni caso, il <i>file</i> è il nome di un file con estensione .docx o .odt. Se tutto è corretto, sarà prodotta una versione .html del file: <br/> Per Abiword: <br/> abiword --to=html <i>file</i><br/> Per LibreOffice+Unoconv:br /&gt; unoconv -f html <i>file.</i><br/></li>
+<li>Che l'utilità di conversione di file sia installata correttamente e stia funzionando. Questo è possibile verificarlo con l'appropriato comando nella riga di comando (terminale/console/prompt di DOS). In ogni caso, il <i>file</i> è il nome di un file con estensione .docx o .odt. Se tutto è corretto, sarà prodotta una versione .html del file: <br/> Per Abiword: <br/> <kbd>abiword --to=html <i>file</i></kbd><br/> Per LibreOffice+Unoconv:<br/> <kbd>unoconv -f html <i>file</i></kbd></li>
 
 <li>Che si sia impostato l'intervallo di aggiornamento automatico nel browser.</li>
 
@@ -295,14 +295,13 @@
 
 
 
-
     <footer class="container-fluid text-center">
   <a href="#page" title="To Top">
     <span class="glyphicon glyphicon-chevron-up"><!----></span>
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>Connetti</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -318,15 +317,15 @@
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
-            <li><a href="/it/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
-            <li><a href="/it/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/it/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/it/reviews"><span class="glyphicon glyphicon-heart"></span> Recensioni di OmegaT</a></li>
+            <li><a href="/it/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manuale</a></li>
+            <li><a href="/it/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Esercitazioni</a></li>
+            <li><a href="/it/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> Guide all'uso</a></li>
+            <li><a href="/it/reviews"><span class="glyphicon glyphicon-heart"></span> Recensioni</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Il progetto OmegaT</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -334,7 +333,7 @@
             <a href="/it/contact"><span class="glyphicon glyphicon-envelope"></span> Contatti e supporto</a>
             </li>
             <li>
-            <a href="/it/about"><span class="glyphicon glyphicon-question-sign"></span> Chi siamo</a>
+            <a href="/it/about"><span class="glyphicon glyphicon-question-sign"></span> Informazioni su</a>
             </li>
             <li>
             <a href="/it/philosophy"><span class="glyphicon glyphicon-console"></span> Filosofia</a>
