--- a/it/philosophy.html
+++ b/it/philosophy.html
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="/it/assets/omegat.js"></script>
 
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT è un'applicazione di memoria di traduzione gratuita per traduttori professionisti scritta in Java.">
 
   <link rel="canonical" href="http://omegat.org/it/philosophy">
 
@@ -43,9 +43,9 @@
   <!-- SEO tags -->
   
   <meta property="og:title"       content="Filosofia - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:description" content="OmegaT è un'applicazione di memoria di traduzione gratuita per traduttori professionisti scritta in Java." />
   <meta property="og:url"         content="http://omegat.org/it/philosophy" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT - lo strumento gratuito per memorie di traduzione" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -56,7 +56,7 @@
     "name": "",
     "url": "http://omegat.org/it",
     "headline": "Filosofia",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "description": "OmegaT è un'applicazione di memoria di traduzione gratuita per traduttori professionisti scritta in Java.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -88,17 +88,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/it/download">Scaricare OmegaT</a></li>
+        <li><a href="/it/download">Scarica</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/it/resources">Altre risorse OmegaT</a></li>
+        <li><a href="/it/resources">Risorse</a></li>
         <li><a href="/it/documentation">Documentazione</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Lingue<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -172,20 +172,20 @@
     <div class="jumbotron jumbo-page titles-philosophy"><h1>Filosofia</h1></div>
         
     <div class="container">
-		
-<h2>Filosofia</h2>
 
 <h3>La filosofia dell'open source</h3>
 
-<p>OmegaT è un'applicazione e un progetto open-source. Questo significa che il codice sorgente del programma OmegaT è liberamente disponibile, e la licenza di OmegaT dà agli utenti una notevole libertà di utilizzo. Non solo può essere utilizzato gratuitamente, ma gli utenti sono anche liberi di farne copie e di distribuirle.</p>
+<p>OmegaT è un'applicazione e un progetto open-source. Questo significa che il codice sorgente del programma OmegaT è liberamente disponibile, e la licenza di OmegaT dà agli utenti una notevole libertà di utilizzo. Non solo può essere utilizzato gratuitamente, ma gli utenti sono anche liberi di farne copie e di distribuirle. </p>
 
-<p>Un aspetto importante di questa libertà è che gli utenti possono anche modificare il codice del programma. Per il movimento open source, è più importante la libertà che gli utenti hanno di modificare il programma in base alle proprie esigenze che il fatto di non doverlo pagare. Dicono: &quot;gratuito come un discorso&quot;, invece che: &quot;gratuito come una birra&quot;.</p><br/>
+<p>Un aspetto importante di questa libertà è che gli utenti possono anche modificare il codice del programma. Per il movimento open source, è più importante la libertà che gli utenti hanno di modificare il programma in base alle proprie esigenze che il fatto di non doverlo pagare. Dicono: "gratuito come un discorso", invece che: "gratuito come una birra".
+
+</p><br/>
 
 <h3>La filosofia del progetto OmegaT</h3>
 
-<p>Lo stesso spirito si può trovare all'interno del progetto OmegaT. Gli utenti sono liberi di scaricare e utilizzare il programma. A loro volta, sono liberi e anzi incoraggiati (ma non impegnati in alcun modo) a contribuire al progetto. Come farlo dipende da loro. Per esempio, non c'è nulla che impedisca a un utente di scrivere il proprio manuale dell'utente o un video dimostrativo di OmegaT e, se il progetto lo dovesse considerare utile, è probabile che sia reso disponibile alla comunità degli utenti di OmegaT. Per quanto riguarda le attività di routine, ai volontari che lavorano sul progetto OmegaT è generalmente data tutta la libertà possibile nel determinare la forma del loro contributo. Questo approccio di &quot;non intervento&quot; è descritto, dall'attuale coordinatore OmegaT del progetto, come &quot;anarchia delegata&quot;.</p>
+<p>Lo stesso spirito si può trovare all'interno del progetto OmegaT. Gli utenti sono liberi di scaricare e utilizzare il programma. A loro volta, sono liberi e anzi incoraggiati (ma non impegnati in alcun modo) a contribuire al progetto. Come farlo dipende da loro. Per esempio, non c'è nulla che impedisca a un utente di scrivere il proprio manuale dell'utente o un video dimostrativo di OmegaT e, se il progetto lo dovesse considerare utile, è probabile che sia reso disponibile alla comunità degli utenti di OmegaT. Per quanto riguarda le attività di routine, ai volontari che lavorano sul progetto OmegaT è generalmente data tutta la libertà possibile nel determinare la forma del loro contributo. Questo approccio di "non intervento" è descritto, dall'attuale coordinatore OmegaT del progetto, come "anarchia delegata".</p>
 
-<p>In alcune aree, è necessario un certo grado di coordinamento. Ad esempio, chiunque è libero di apportare modifiche al codice del programma OmegaT e di presentarle alla squadra degli sviluppatori. Tuttavia la squadra li includerà in OmegaT solo se saranno considerate di beneficio per gli utenti di OmegaT. Questo assicura la protezione degli interessi degli utenti, e ha anche fruttato a OmegaT il premio <a href="http://mac.softpedia.com/get/Word-Processing/OmegaT.shtml">Softpedia &quot;100% clean&quot; guarantee</a>.</p><br/>
+<p>In alcune aree, è necessario un certo grado di coordinamento. Ad esempio, chiunque è libero di apportare modifiche al codice del programma OmegaT e di presentarle alla squadra degli sviluppatori. Tuttavia la squadra li includerà in OmegaT solo se saranno considerate di beneficio per gli utenti di OmegaT. Questo assicura la protezione degli interessi degli utenti, e ha anche fruttato a OmegaT il premio <a href="http://mac.softpedia.com/get/Word-Processing/OmegaT.shtml">Softpedia "100% FREE" guarantee</a>.</p><br/>
 
 <h3>Sviluppo di OmegaT</h3>
 
@@ -195,15 +195,14 @@
 
 <p>La discussione tecnica dettagliata delle modifiche è condotta meglio direttamente con gli sviluppatori di OmegaT. A tale scopo, esiste una <a href="https://lists.sourceforge.net/lists/listinfo/omegat-development">mailing list degli sviluppatori</a> dedicata.</p>
 
-<p>Una volta che un utente ha formulato una proposta di modifica o di potenziamento di OmegaT, esiste una procedura definita per sottoporla all'attenzione della squadra di sviluppo. Questa procedura consente di gestire più facilmente i numerosi suggerimenti. È definita &quot;RFE&quot; ('Request for Feature Enhancement', richiesta di potenziamento di funzionalità) ed è gestita <a href="http://sourceforge.net/tracker/?atid=520350&amp;group_id=68187&amp;func=browse">qui</a>.</p>
+<p>Una volta che un utente ha formulato una proposta di modifica o di potenziamento di OmegaT, esiste una procedura definita per sottoporla all'attenzione della squadra di sviluppo. Questa procedura consente di gestire più facilmente i numerosi suggerimenti. È definita <a href="https://sourceforge.net/p/omegat/feature-requests/">"RFE" ('Request for Feature Enhancement', richiesta di potenziamento di funzionalità) ed è gestita qui</a>.</p>
 
-<p>Sono state già fatte centinaia di RFE, e molte di esse realizzate. L'invio di una RFE non significa, tuttavia, che la funzione o la miglioria richiesta venga automaticamente implementata. La sua adozione dipende in primo luogo dal fatto se la squadra di sviluppo la considera utile a OmegaT, e in secondo luogo se uno degli sviluppatori sia disposto a realizzarla.</p>
+<p>Sono state già fatte centinaia di RFE, e molte di esse realizzate. L'invio di una RFE non significa, tuttavia, che la funzione o la miglioria richiesta venga automaticamente implementata. La sua adozione dipende in primo luogo dal fatto se la squadra di sviluppo la considera utile a OmegaT, e in secondo luogo se uno degli sviluppatori sia disposto a realizzarla. </p>
 
 <p>Gli sviluppatori di OmegaT, tutti volontari, possono essere più disposti a implementare una RFE se il lavoro di sviluppo è finanziato dal richiedente. <a href="sponsorship.html">La sponsorizzazione dello sviluppo ha già consentito di realizzare l'aggiunta di alcune caratteristiche.</a> Se si è disposti a finanziare il lavoro di implementazione di una funzionalità desiderata, è possibile contattare privatamente la squadra di sviluppo per un preventivo. È possibile anche che gli sviluppi commissionati da sviluppatori esterni siano implementati all'interno di OmegaT. Come per gli sviluppi gratuiti, tuttavia, è ancora applicabile il principio che eventuali modifiche di OmegaT debbano sempre essere vantaggiose per l'applicazione e i suoi utenti.</p>
 
 
 </div>
-
 
 
 
@@ -214,7 +213,7 @@
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>Connetti</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -230,15 +229,15 @@
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
-            <li><a href="/it/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
-            <li><a href="/it/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/it/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/it/reviews"><span class="glyphicon glyphicon-heart"></span> Recensioni di OmegaT</a></li>
+            <li><a href="/it/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manuale</a></li>
+            <li><a href="/it/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Esercitazioni</a></li>
+            <li><a href="/it/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> Guide all'uso</a></li>
+            <li><a href="/it/reviews"><span class="glyphicon glyphicon-heart"></span> Recensioni</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Il progetto OmegaT</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -246,7 +245,7 @@
             <a href="/it/contact"><span class="glyphicon glyphicon-envelope"></span> Contatti e supporto</a>
             </li>
             <li>
-            <a href="/it/about"><span class="glyphicon glyphicon-question-sign"></span> Chi siamo</a>
+            <a href="/it/about"><span class="glyphicon glyphicon-question-sign"></span> Informazioni su</a>
             </li>
             <li>
             <a href="/it/philosophy"><span class="glyphicon glyphicon-console"></span> Filosofia</a>
