--- a/it/sponsorship.html
+++ b/it/sponsorship.html
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="/it/assets/omegat.js"></script>
 
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT è un'applicazione di memoria di traduzione gratuita per traduttori professionisti scritta in Java.">
 
   <link rel="canonical" href="http://omegat.org/it/sponsorship">
 
@@ -43,9 +43,9 @@
   <!-- SEO tags -->
   
   <meta property="og:title"       content="Sponsorizzazione - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:description" content="OmegaT è un'applicazione di memoria di traduzione gratuita per traduttori professionisti scritta in Java." />
   <meta property="og:url"         content="http://omegat.org/it/sponsorship" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT - lo strumento gratuito per memorie di traduzione" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -56,7 +56,7 @@
     "name": "",
     "url": "http://omegat.org/it",
     "headline": "Sponsorizzazione",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "description": "OmegaT è un'applicazione di memoria di traduzione gratuita per traduttori professionisti scritta in Java.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -88,17 +88,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/it/download">Scaricare OmegaT</a></li>
+        <li><a href="/it/download">Scarica</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/it/resources">Altre risorse OmegaT</a></li>
+        <li><a href="/it/resources">Risorse</a></li>
         <li><a href="/it/documentation">Documentazione</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Lingue<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -172,28 +172,65 @@
     <div class="jumbotron jumbo-page titles-sponsorship"><h1>Sponsorizzazione</h1></div>
         
     <div class="container">
-		
-<h2>Sponsorizzazione</h2>
-
-<p>La maggior parte del lavoro sul progetto OmegaT è stata completata su base volontaria. Alcune funzioni del programma sono state comunque commissionate da sponsor commerciali, che poi hanno reso le nuove funzionalità alla comunità. Ad oggi, questi sponsor sono:</p>
-
-
-<p><a href="http://www.balabit.com/">Balabit</a></p>
-<p><a href="http://www.cjtranslations.com/">CJ Translations</a></p>
-<p><a href="http://www.commodity12.eu/">Commodity12</a></p>
-<p><a href="http://www.diptik.fr"/>Diptik</a></p>
-<p><a href="http://www.doublet.jp/">Doublet KK</a></p>
-<p><a href="http://www.e-lexica.com/">e-lexica</a></p>
-<p><a href="http://www.ill.eu/">Institut Laue-Langevin</a></p>
-<p><a href="http://www.invantive.com">Invantive</a></p>
-<p><a href="http://www.portavita.eu/">Portavita</a></p>
-<p><a href="http://www.marcprior.de/">Marc Prior</a></p>
-<p><a href="http://www.qabiria.com/">Qabiria</a></p>
-<p><a href="http://www.welocalize.com/">weLocalize</a></p>
-
-		</div>
-
-
+  <h2>Sponsorizzazione</h2>
+  <p>La maggior parte del lavoro sul progetto OmegaT è stata completata su base volontaria. Alcune funzioni del programma sono state comunque commissionate da sponsor commerciali, che poi hanno reso le nuove funzionalità alla comunità. Ad oggi, questi sponsor sono:</p>
+  <ul>
+    <li>
+      <a href="http://www.balabit.com/">Balabit</a>
+    </li>
+    <li>
+      <a href="http://www.capstan.be/">cApStAn</a>
+    </li>
+    <li>
+      <a href="http://www.cjtranslations.com/">CJ Translations</a>
+    </li>
+    <li>
+      <a href="http://www.commodity12.eu/">Commodity12</a>
+    </li>
+    <li>
+      <a href="http://www.diptik.fr/">Diptik</a>
+    </li>
+    <li>
+      <a href="http://www.doublet.jp/">Doublet KK</a>
+    </li>
+    <li>
+      <a href="http://www.e-lexica.com/">e-lexica</a>
+    </li>
+    <li>
+      <a href="http://www.genua.de/">Genua</a>
+    </li>
+    <li>
+      <a href="http://www.tradumatica.net/">Grup de Recerca Tradumàtica</a>
+    </li>
+    <li>
+      <a href="http://www.ill.eu/">Institut Laue-Langevin</a>
+    </li>
+    <li>
+      <a href="http://www.invantive.com">Invantive</a>
+    </li>
+    <li>
+      <a href="http://www.japanese-translations.co.uk/">Julian Rippon</a>
+    </li>
+    <li>
+      <a href="http://kilgray.com/">Kilgray</a>
+    </li>
+    <li>
+      <a href="http://www.portavita.eu/">Portavita</a>
+    </li>
+    <li>
+      <a href="http://www.marcprior.de/">Marc Prior</a>
+    </li>
+    <li>
+      <a href="http://www.qabiria.com/">Qabiria</a>
+    </li>
+    <li>
+      <a href="http://www.velior.ru/en">Velior</a>
+    </li>
+    <li>
+      <a href="http://www.welocalize.com/">weLocalize</a>
+    </li>
+  </ul>
+</div>
 
 
 
@@ -204,7 +241,7 @@
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>Connetti</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -220,15 +257,15 @@
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
-            <li><a href="/it/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
-            <li><a href="/it/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/it/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/it/reviews"><span class="glyphicon glyphicon-heart"></span> Recensioni di OmegaT</a></li>
+            <li><a href="/it/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manuale</a></li>
+            <li><a href="/it/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Esercitazioni</a></li>
+            <li><a href="/it/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> Guide all'uso</a></li>
+            <li><a href="/it/reviews"><span class="glyphicon glyphicon-heart"></span> Recensioni</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Il progetto OmegaT</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -236,7 +273,7 @@
             <a href="/it/contact"><span class="glyphicon glyphicon-envelope"></span> Contatti e supporto</a>
             </li>
             <li>
-            <a href="/it/about"><span class="glyphicon glyphicon-question-sign"></span> Chi siamo</a>
+            <a href="/it/about"><span class="glyphicon glyphicon-question-sign"></span> Informazioni su</a>
             </li>
             <li>
             <a href="/it/philosophy"><span class="glyphicon glyphicon-console"></span> Filosofia</a>
