--- a/uk/howtos/tokenizer.html
+++ b/uk/howtos/tokenizer.html
@@ -292,7 +292,7 @@ org.omegat.plugins.tokenizer.SnowballTurkishTokenizer</p>
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>OmegaT в мережі</h4>
+        <h4>OmegaT у мережі</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
