--- a/it/contact.html
+++ b/it/contact.html
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="/it/assets/omegat.js"></script>
 
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT è un'applicazione di memoria di traduzione gratuita per traduttori professionisti scritta in Java.">
 
   <link rel="canonical" href="http://omegat.org/it/contact">
 
@@ -43,9 +43,9 @@
   <!-- SEO tags -->
   
   <meta property="og:title"       content="Contatti e supporto - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:description" content="OmegaT è un'applicazione di memoria di traduzione gratuita per traduttori professionisti scritta in Java." />
   <meta property="og:url"         content="http://omegat.org/it/contact" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT - lo strumento gratuito per memorie di traduzione" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -56,7 +56,7 @@
     "name": "",
     "url": "http://omegat.org/it",
     "headline": "Contatti e supporto",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "description": "OmegaT è un'applicazione di memoria di traduzione gratuita per traduttori professionisti scritta in Java.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -88,17 +88,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/it/download">Scaricare OmegaT</a></li>
+        <li><a href="/it/download">Scarica</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/it/resources">Altre risorse OmegaT</a></li>
+        <li><a href="/it/resources">Risorse</a></li>
         <li><a href="/it/documentation">Documentazione</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Lingue<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -172,81 +172,55 @@
     <div class="jumbotron jumbo-page titles-contact"><h1>Contatti e supporto</h1></div>
         
     <div class="container">
-		
-<h2>Contatti e supporto</h2>
+  <h3>Gruppo di utenti</h3>
+  <p>OmegaT ha un gruppo di utenti molto attivo, solidale e multilingue <a href="http://groups.yahoo.com/group/omegat">qui</a>, gli utenti sono caldamente incoraggiati a partecipare. Il gruppo di utenti serve anche come il principale punto di contatto tra gli utenti e il gruppo di progetto.</p>
+  <br/>
+  <h3>Mailing list</h3>
+  <p>OmegaT ha anche le seguenti mailing list e revisori, che sono ospitati su Sourceforge:</p>
+  <table class="table">
+    <tbody>
+      <tr>
+        <td>
+          <a href="https://lists.sourceforge.net/lists/listinfo/omegat-development">OmTdev</a>
+        </td>
+        <td>Lista degli sviluppatori di OmegaT. Questa lista è per le discussioni più tecniche di sviluppo e  per le caratteristiche ed è destinata agli sviluppatori di OmegaT e altre parti interessate.</td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://lists.sourceforge.net/lists/listinfo/omegat-l10n">OmT-l10n</a>
+        </td>
+        <td>Questa mailing list è dedicata ai localizzatori di OmegaT.</td>
+      </tr>
+    </tbody>
+  </table>
+  <br/>
+  <h3>Sistema di revisione</h3>
+  <p>Errori (bug), richieste di nuove funzionalità e problemi di documentazione sono gestite su Sourceforge dai seguenti sistemi di revisione. Non utilizzare questi sistemi di revisione prima di aver sollevato la questione nel gruppo utenti e, o in alternativa, nella mailing list.</p>
+  <table class="table">
+    <tbody>
+      <tr>
+        <td>
+          <a href="https://sourceforge.net/p/omegat/bugs/">Sistema di revisione dei problemi e degli errori</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://sourceforge.net/p/omegat/feature-requests/">Sistema di revisione richieste di funzionalità</a>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <a href="https://sourceforge.net/p/omegat/documentation/">Sistema di revisione della documentazione</a>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <br/>
+  <h3>Amministrazione</h3>
 
-<h3>Gruppo di utenti</h3>
-
-<p>OmegaT ha un gruppo di utenti molto attivo, solidale e multilingue <a href="http://groups.yahoo.com/group/omegat">qui</a>, gli utenti sono caldamente incoraggiati a partecipare. Il gruppo di utenti serve anche come il principale punto di contatto tra gli utenti e il gruppo di progetto.</p><br/>
-
-<h3>Mailing list</h3>
-
-<p>OmegaT ha anche le seguenti mailing list e revisori, che sono ospitati su Sourceforge:</p>
-		
-<table>
-
-		<tbody>
-
-    <tr>
-
-      <td><a href="https://lists.sourceforge.net/lists/listinfo/omegat-development">OmTdev</a></td>
-
-      <td>Lista degli sviluppatori di OmegaT. Questa lista è per le discussioni più tecniche di sviluppo e  per le caratteristiche ed è destinata agli sviluppatori di OmegaT e altre parti interessate.</td>
-
-    </tr>
-
-    <tr>
-
-      <td><a href="https://lists.sourceforge.net/lists/listinfo/omegat-l10n">OmT-l10n</a></td>
-
-      <td>Questa mailing list è dedicata ai localizzatori di OmegaT.</td>
-
-    </tr>
-  
-  </tbody>
-
-</table>
-
-<br/>
-
-<h3>Sistema di revisione</h3>
-
-<p>Errori (bug), richieste di nuove funzionalità e problemi di documentazione sono gestite su Sourceforge dai seguenti sistemi di revisione. Non utilizzare questi sistemi di revisione prima di aver sollevato la questione nel gruppo utenti e, o in alternativa, nella mailing list.</p>
-
-<table>
-
-		<tbody>
-
-    <tr>
-
-      <td><a href="http://sourceforge.net/tracker/?atid=520347&amp;group_id=68187&amp;func=browse">Sistema di revisione dei problemi e degli errori</a></td>
-
-    </tr>
-
-    <tr>
-
-      <td><a href="http://sourceforge.net/tracker/?atid=520350&amp;group_id=68187&amp;func=browse">Sistema di revisione richieste di funzionalità</a></td>
-
-    </tr>
-
-    <tr>
-
-      <td><a href="http://sourceforge.net/tracker/?atid=912617&amp;group_id=68187&amp;func=browse">Sistema di revisione della documentazione</a></td>
-
-    </tr>
-
-  </tbody>
-
-</table>
-
-<br/>
-
-<h3>Amministrazione</h3>
-		
-<p>Si prega di contattare il <a href="mailto:info@omegat.org">Coordinatore del progetto OmegaT</a> per quanto riguarda eventuali problemi di amministrazione.</p>
+  <p>Si prega di contattare il <a href="mailto:info@omegat.org">responsabile del progetto OmegaT</a> per quanto riguarda qualsiasi questione non trattata sopra.<br/> Si prega di contattare il <a href="mailto:webmaster@omegat.org">webmaster</a> per qualsiasi questione riguardi specificamente il sito web.</p>
 
 </div>
-
 
 
 
@@ -257,7 +231,7 @@
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>Connetti</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -273,15 +247,15 @@
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
-            <li><a href="/it/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
-            <li><a href="/it/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/it/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/it/reviews"><span class="glyphicon glyphicon-heart"></span> Recensioni di OmegaT</a></li>
+            <li><a href="/it/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manuale</a></li>
+            <li><a href="/it/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Esercitazioni</a></li>
+            <li><a href="/it/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> Guide all'uso</a></li>
+            <li><a href="/it/reviews"><span class="glyphicon glyphicon-heart"></span> Recensioni</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Il progetto OmegaT</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -289,7 +263,7 @@
             <a href="/it/contact"><span class="glyphicon glyphicon-envelope"></span> Contatti e supporto</a>
             </li>
             <li>
-            <a href="/it/about"><span class="glyphicon glyphicon-question-sign"></span> Chi siamo</a>
+            <a href="/it/about"><span class="glyphicon glyphicon-question-sign"></span> Informazioni su</a>
             </li>
             <li>
             <a href="/it/philosophy"><span class="glyphicon glyphicon-console"></span> Filosofia</a>
