--- a/it/howtos/compiling_from_source.html
+++ b/it/howtos/compiling_from_source.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Howto - Compiling OmegaT from the source code - OmegaT</title>
+  <title>Guida - Compilare OmegaT dal codice sorgente - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="/it/assets/omegat.js"></script>
 
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT è un'applicazione di memoria di traduzione gratuita per traduttori professionisti scritta in Java.">
 
   <link rel="canonical" href="http://omegat.org/it/howtos/compiling_from_source">
 
@@ -42,10 +42,10 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Howto - Compiling OmegaT from the source code - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:title"       content="Guida - Compilare OmegaT dal codice sorgente - OmegaT" />
+  <meta property="og:description" content="OmegaT è un'applicazione di memoria di traduzione gratuita per traduttori professionisti scritta in Java." />
   <meta property="og:url"         content="http://omegat.org/it/howtos/compiling_from_source" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT - lo strumento gratuito per memorie di traduzione" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -55,8 +55,8 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/it",
-    "headline": "Howto - Compiling OmegaT from the source code",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "headline": "Guida - Compilare OmegaT dal codice sorgente",
+    "description": "OmegaT è un'applicazione di memoria di traduzione gratuita per traduttori professionisti scritta in Java.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -88,17 +88,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/it/download">Scaricare OmegaT</a></li>
+        <li><a href="/it/download">Scarica</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/it/resources">Altre risorse OmegaT</a></li>
+        <li><a href="/it/resources">Risorse</a></li>
         <li><a href="/it/documentation">Documentazione</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Lingue<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -169,133 +169,67 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-howtos-compiling_from_source"><h1>Howto - Compiling OmegaT from the source code</h1></div>
+    <div class="jumbotron jumbo-page titles-howtos-compiling_from_source"><h1>Guida - Compilare OmegaT dal codice sorgente</h1></div>
         
     <div class="container">
-
-<h2>Guida di OmegaT: <br/>Compilare OmegaT dal codice sorgente</h2>
-
-
-<p>Questa guida descrive come compilare OmegaT a partire dal codice sorgente.</p>
-
-<p>OmegaT è fornito pronto e già compilato per diverse piattaforme, incluso una versione multi-piattaforma. Gli utenti pertanto non devono compilare da sé OmegaT. La compilazione di OmegaT è importante per gli sviluppatori che desiderano apportare proprie modifiche al codice.</p>
-
-<p><strong>1. Scaricare e installare il Java Development Kit (JDK) e Apache Ant</strong></p>
-
-<p>Possono essere utilizzati vari programmi per compilare il codice sorgente dopo averlo modificato, ma tra gli altri, il più adatto è <a href="http://ant.apache.org">Apache Ant</a>. È necessario anche il <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">Java Development Kit</a> (JDK).</p>
-
-<p>In base a come si installa il Java Developmenti Kit, potrebbe essere necessario modificare l'attributo &quot;JAVA_HOME&quot; per farlo funzionare con Ant.</p>
-
-<p><strong>2. Compilare il codice</strong></p>
-
-<p>I nomi sotto indicati delle cartelle sono solo per illustrazione; i numeri di versione saranno diversi.</p>
-
-<p>Aprire una finestra della riga di comando (console, finestra DOS). Passare alla cartella principale del codice sorgente di OmegaT (la cartella che contiene il file build.xml), ad esempio</p>
-
-<p style="font-family: monospace;">cd C:\Documenti\MioOmegat\OmegaT_2.2.3_Beta_Source</p>
-
-<p>All'interno di questa cartella, eseguire Apache Ant digitando l'eseguibile di Ant. Potrebbe essere necessario immettere il percorso completo, ad esempio:</p>
-
-<p style="font-family: monospace;">C:\Programmi\apache-ant-1.7.0-bin\apache-ant-1.7.0\bin\ant</p>
-
-<p>Se il codice viene compilato correttamente, sarà visualizzato il messaggio &quot;BUILD SUCCESSFUL&quot;. In caso contrario verranno mostrati i messaggi di debug che (si spera) forniranno un'idea di dov'è il problema.</p>
-
-<p><strong>3. Avviare OmegaT</strong></p>
-
-<p>Se il codice è stato compilato con successo, il file OmegaT compilato si troverà in:</p>
-
-<p style="font-family: monospace;">OmegaT_2.2.3_Beta_Source\dist</p>
-
-<p>Nella finestra della riga di comando, passare a questa cartella, per esempio con:</p>
-
-<p style="font-family: monospace;">cd C:\Documenti\MioOmegat\OmegaT_1.8.0_01_Beta_Source\dist</p>
-
-<p>e avviare OmegaT con:</p>
-
-<p style="font-family: monospace;">java -jar OmegaT.jar</p>
-
-
-
-<p><strong>4a. 1° esempio di modifica: cambiare il colore di evidenziazione del segmento</strong></p>
-
-<p>Nella cartella</p>
-
-<p style="font-family: monospace;">src/org/omegat/gui/editor</p>
-
-<p>Aprire il file SegmentBuilder.java in un editor di testo.</p>
-
-<p>Trovare le righe:</p>
-
-<p style="font-family: monospace;">return Styles.createAttributeSet(fg, Styles.COLOR_GREEN, true, null);</p>
-
-<p>e</p>
-
-<p style="font-family: monospace;">b = Styles.COLOR_GREEN;</p>
-
-<p>e sostituire</p>
-
-<p style="font-family: monospace;">COLOR_GREEN</p>
-
-<p>con</p>
-
-<p style="font-family: monospace;">COLOR_BLUE.</p>
-
-<p>Nella cartella</p>
-
-<p style="font-family: monospace;">src/org/omegat/util/gui</p>
-
-<p>Aprire il file Styles.java in un editor di testo.</p>
-
-<p>Trovare la riga</p>
-
-<p style="font-family: monospace;">public static final Color COLOR_GREEN = new Color(192, 255, 192);</p>
-
-<p>Sostituire</p>
-
-<p style="font-family: monospace;">COLOR_GREEN</p>
-
-<p>con</p>
-
-<p style="font-family: monospace;">COLOR_BLUE</p>
-
-<p>e</p>
-
-<p style="font-family: monospace;">192, 255, 192 </p>
-
-<p>con</p>
-
-<p style="font-family: monospace;">225, 225, 255.</p>
-
-
-
-<p><strong>4b. 2 ° esempio di modifica: aumentare il numero di corrispondenze parziali visualizzate da cinque a dieci</strong></p>
-
-<p>Nella cartella</p>
-
-<p style="font-family: monospace;">/src/org/omegat/util</p>
-
-<p>Aprire il file OConsts.java con un editor di testo.</p>
-
-<p>Trovare le righe:</p>
-
-<p style="font-family: monospace;">    /** Number of fuzzy matches to display */<br/>
-    public static final int MAX_NEAR_STRINGS = 5;</p>
-
-<p>e sostituire</p>
-
-<p style="font-family: monospace;">= 5</p>
-
-<p>con</p>
-
-<p style="font-family: monospace;">= 10</p>
-
-
-<p>Per entrambi gli esempi, compilare e testare come descritto sopra.</p>
-
-<p>Copyright Marc Prior 2011-2012</p>
-
+  <p>Questa guida descrive come compilare OmegaT a partire dal codice sorgente.</p>
+  <p>OmegaT è fornito pronto e già compilato per diverse piattaforme, incluso una versione multi-piattaforma. Gli utenti pertanto non devono compilare da sé OmegaT. La compilazione di OmegaT è importante per gli sviluppatori che desiderano apportare proprie modifiche al codice. </p>
+  <p>
+    <strong>1. Scaricare e installare il Java Development Kit (JDK)</strong>
+  </p>
+  <p>È necessario il <a href="http://www.oracle.com/technetwork/java/javase/downloads/index.html">Java Development Kit</a>. Per OmegaT v. 4.0 e successive non è richiesto software aggiuntivo.</p>
+  <p>Per le versioni precedenti di OmegaT è necessario <a href="http://ant.apache.org">Apache Ant</a>.</p>
+  <p>Per puntare alla posizione del JDK potrebbe essere necessario impostare la variabile d'ambiente <code>JAVA_HOME</code>.</p>
+  <p>
+    <strong>2. Compilare il codice</strong>
+  </p>
+  <p>Aprire una finestra della riga di comando (console, finestra DOS). Navigare fino alla radice del codice sorgente di OmegaT (la cartella che contiene il file <code>build.gradle</code>), es.</p>
+  <pre>cd C:\Documenti\MioOmegat\OmegaT_&lt;version&gt;_Beta_Source</pre>
+  <p>
+    <em>OmegaT v. 4.0 o successive</em>
+  </p>
+  <p>È possibile avviare OmegaT direttamente dalla riga di comando con</p>
+  <pre>gradlew run</pre>
+  <p>Se si interessati solo a questo, è possibile saltare al passaggio 3a.</p>
+  <p>Per compilare il programma OmegaT e tutti i file associati, eseguire invece</p>
+  <pre>gradlew installDist</pre>
+  <p>Il risultato si troverà nella cartella <code>build\install\OmegaT</code>.</p>
+  <p>
+    <em>Versioni precedenti di OmegaT</em>
+  </p>
+  <p>All'interno della cartella radice, eseguire Apache Ant digitando l'eseguibile di Ant. Potrebbe essere necessario immettere il percorso completo, ad esempio:</p>
+  <pre>C:\Programmi\apache-ant-1.7.0-bin\apache-ant-1.7.0\bin\ant</pre>
+  <p>Se il codice è compilato correttamente, sarà visualizzato il messaggio <code>BUILD SUCCESSFUL</code>. In caso contrario saranno mostrati i messaggi di debug che, si spera, forniranno un'idea di dov'è il problema.</p>
+  <p>Se il codice è stato compilato correttamente, il file OmegaT compilato si troverà in:</p>
+  <pre>OmegaT_&lt;version&gt;_Beta_Source\dist</pre>
+  <p>Nella finestra della riga di comando, passare a questa cartella, per esempio con:</p>
+  <pre>cd C:\Documenti\MioOmegat\OmegaT_&lt;version&gt;_Beta_Source\dist</pre>
+  <p>e avviare OmegaT con:</p>
+  <pre>java -jar OmegaT.jar</pre>
+  <p>
+    <strong>3a. 1° esempio di modifica: cambiare il colore di evidenziazione del segmento</strong>
+  </p>
+  <p>Nella cartella <code>src/org/omegat/gui/editor</code> aprire il file <code>SegmentBuilder.java</code> in un editor di testo.</p>
+  <p>Individuare le righe:</p>
+  <pre>return Styles.createAttributeSet(fg, Styles.COLOR_GREEN, true, null);</pre>
+  <p>e</p>
+  <pre>b = Styles.COLOR_GREEN;</pre>
+  <p>e sostituire <code>COLOR_GREEN</code> con <code>COLOR_BLUE</code>.</p>
+  <p>Nella cartella <code>src/org/omegat/util/gui</code> aprire il file <code>Styles.java</code> in un editor di testo.</p>
+  <p>Individuare la riga</p>
+  <pre>public static final Color COLOR_GREEN = new Color(192, 255, 192);</pre>
+  <p>Sostituire <code>COLOR_GREEN</code> con <code>COLOR_BLUE</code> e <code>192, 255, 192</code> con <code>225, 225, 255</code>.</p>
+  <p>
+    <strong>3b. 2 ° esempio di modifica: aumentare il numero di corrispondenze parziali visualizzate da cinque a dieci</strong>
+  </p>
+  <p>Nella cartella <code>/src/org/omegat/util</code> aprire il file <code>OConsts.java</code> in un editor di testo.</p>
+  <p>Individuare le righe:</p>
+  <pre>    /** Number of fuzzy matches to display */
+    public static final int MAX_NEAR_STRINGS = 5;</pre>
+  <p>e sostituire <code>= 5</code> con <code>= 10</code>.</p>
+  <p>Per entrambi gli esempi, compilare e verificare come descritto sopra.</p>
+  <p>Copyright Marc Prior 2011-2012</p>
 </div>
-
 
 
 
@@ -306,7 +240,7 @@
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>Connetti</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -322,15 +256,15 @@
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
-            <li><a href="/it/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
-            <li><a href="/it/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/it/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/it/reviews"><span class="glyphicon glyphicon-heart"></span> Recensioni di OmegaT</a></li>
+            <li><a href="/it/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manuale</a></li>
+            <li><a href="/it/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Esercitazioni</a></li>
+            <li><a href="/it/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> Guide all'uso</a></li>
+            <li><a href="/it/reviews"><span class="glyphicon glyphicon-heart"></span> Recensioni</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Il progetto OmegaT</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -338,7 +272,7 @@
             <a href="/it/contact"><span class="glyphicon glyphicon-envelope"></span> Contatti e supporto</a>
             </li>
             <li>
-            <a href="/it/about"><span class="glyphicon glyphicon-question-sign"></span> Chi siamo</a>
+            <a href="/it/about"><span class="glyphicon glyphicon-question-sign"></span> Informazioni su</a>
             </li>
             <li>
             <a href="/it/philosophy"><span class="glyphicon glyphicon-console"></span> Filosofia</a>
