--- a/it/howtos/spelling.html
+++ b/it/howtos/spelling.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
-  <title>Howto - Spellchecking - OmegaT</title>
+  <title>Guida - Correttore ortografico - OmegaT</title>
 
   
   <link rel="apple-touch-icon" sizes="180x180"    href="/apple-touch-icon.png">
@@ -26,7 +26,7 @@
   <script type="text/javascript" src="/it/assets/omegat.js"></script>
 
 
-  <meta name="description" content="OmegaT is a free open-source translation memory application for professional translators written in Java.">
+  <meta name="description" content="OmegaT è un'applicazione di memoria di traduzione gratuita per traduttori professionisti scritta in Java.">
 
   <link rel="canonical" href="http://omegat.org/it/howtos/spelling">
 
@@ -42,10 +42,10 @@
 
   <!-- SEO tags -->
   
-  <meta property="og:title"       content="Howto - Spellchecking - OmegaT" />
-  <meta property="og:description" content="OmegaT is a free open-source translation memory application for professional translators written in Java." />
+  <meta property="og:title"       content="Guida - Correttore ortografico - OmegaT" />
+  <meta property="og:description" content="OmegaT è un'applicazione di memoria di traduzione gratuita per traduttori professionisti scritta in Java." />
   <meta property="og:url"         content="http://omegat.org/it/howtos/spelling" />
-  <meta property="og:site_name"   content="OmegaT - The Free Translation Memory Tool" />
+  <meta property="og:site_name"   content="OmegaT - lo strumento gratuito per memorie di traduzione" />
   
   <meta name="twitter:card" content="summary" />
   <meta name="twitter:site" content="@OmegaTOfficial" />
@@ -55,8 +55,8 @@
     "@type": "WebSite",
     "name": "",
     "url": "http://omegat.org/it",
-    "headline": "Howto - Spellchecking",
-    "description": "OmegaT is a free open-source translation memory application for professional translators written in Java.",
+    "headline": "Guida - Correttore ortografico",
+    "description": "OmegaT è un'applicazione di memoria di traduzione gratuita per traduttori professionisti scritta in Java.",
     "publisher": {
       "@type": "Organization",
       "logo": {
@@ -88,17 +88,17 @@
     </div>
     <div class="collapse navbar-collapse navbar-right" id="omegat-menu">
       <ul class="nav navbar-nav">
-        <li><a href="/it/download">Scaricare OmegaT</a></li>
+        <li><a href="/it/download">Scarica</a></li>
       </ul>
       <ul class="nav navbar-nav">
-        <li><a href="/it/resources">Altre risorse OmegaT</a></li>
+        <li><a href="/it/resources">Risorse</a></li>
         <li><a href="/it/documentation">Documentazione</a></li>
       </ul>
       <ul class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
             <span data-toggle="popover" class="language-popover" data-trigger="manual" data-container="body" title="-" data-content="-" data-placement="bottom">
-              Languages<span class="caret"><!----></span> <span class="sr-only">(current)</span>
+              Lingue<span class="caret"><!----></span> <span class="sr-only">(current)</span>
             </span>
           </a>
           <ul class="dropdown-menu languages">
@@ -169,35 +169,26 @@
 </nav>
 
 
-    <div class="jumbotron jumbo-page titles-howtos-spelling"><h1>Howto - Spellchecking</h1></div>
+    <div class="jumbotron jumbo-page titles-howtos-spelling"><h1>Guida - Correttore ortografico</h1></div>
         
     <div class="container">
-
-<h2>Guida di OmegaT: Correzione ortografica</h2>
 
 <p>OmegaT possiede un correttore ortografico integrato. Questa funzione sfrutta i dizionari ortografici usati in LibreOffice e OpenOffice. I dizionari sono disponibili per un gran numero di lingue.</p>
 
 <h3>Installare un nuovo dizionario ortografico in OmegaT</h3>
 
-<p>I nuovi dizionari ortografici possono essere installati all'interno di OmegaT dalla finestra di dialogo che si apre dal menu Opzioni &gt; Correzione ortografica. In questa finestra selezionare o creare una cartella di file di dizionario presente nel proprio disco rigido. Questa è la cartella in cui verranno memorizzati i file dei dizionari ortografici (non confondere questa cartella con la cartella &quot;dictionary&quot; nei progetti di OmegaT). Selezionare quindi l'URL (indirizzo web) di un archivio in linea da cui scaricare il dizionario, o i dizionari, e incollare questo indirizzo nel campo &quot;URL dei dizionari in linea&quot;. Di seguito è fornito un elenco di URL di tali depositi.</p>
+<p>I nuovi dizionari ortografici possono essere installati all'interno di OmegaT dalla finestra di dialogo che si apre dal menu Opzioni &gt; Correzione ortografica. In questa finestra selezionare o creare una cartella di file di dizionario presente nel proprio disco rigido. Questa è la cartella in cui verranno memorizzati i file dei dizionari ortografici (non confondere questa cartella con la cartella "dictionary" nei progetti di OmegaT). Selezionare quindi l'URL (indirizzo web) di un archivio in linea da cui scaricare il dizionario, o i dizionari, e incollare questo indirizzo nel campo "URL dei dizionari in linea". Di seguito è fornito un elenco di URL di tali depositi. </p>
 
 <p><a name="repositories">URL di archivi di dizionari ortografici:</a></p>
 
 <p>
+
 http://download.services.openoffice.org/files/contrib/dictionaries/<br/>
-http://openoffice.paris.fr/openoffice/contrib/dictionaries/<br/>
-http://openoffice.osuosl.org/contrib/dictionaries/<br/>
 http://ftp.uni-kl.de/pub/OpenOffice/contrib/dictionaries/<br/>
-http://ftp.uni-erlangen.de/mirrors/openoffice/contrib/dictionaries/<br/>
-http://ftp.fernuni-hagen.de/ftpdir/pub/mirrors/www.openoffice.org/contrib/dictionaries/<br/>
-http://ftp.plusline.de/OpenOffice/contrib/dictionaries/<br/>
 http://ftp.plusline.de/OpenOffice/contrib/dictionaries/<br/>
 http://ftp.nluug.nl/office/openoffice/contrib/dictionaries/<br/>
 http://ftp.nluug.nl/office/openoffice/contrib/dictionaries/<br/>
 http://linorg.usp.br/OpenOffice.org/contrib/dictionaries/<br/>
-http://ftp.uni-muenster.de/pub/mirrors/ftp.openoffice.org/contrib/dictionaries/<br/>
-http://ftp.uni-http://openoffice.mirrors.tds.net/pub/openoffice/contrib/dictionaries/<br/>
-http://openoffice.mirrors.tds.net/pub/openoffice/contrib/dictionaries/<br/>
 http://artfiles.org/openoffice.org/contrib/dictionaries/<br/>
 http://artfiles.org/openoffice.org/contrib/dictionaries/<br/>
 http://ftp.heanet.ie/mirrors/openoffice.org/contrib/dictionaries/<br/>
@@ -205,11 +196,6 @@ http://ftp.heanet.ie/mirrors/openoffice.org/contrib/dictionaries/<br/>
 http://freebsd.csie.nctu.edu.tw/distfiles/openoffice.org1.1/<br/>
 http://freebsd.csie.nctu.edu.tw/distfiles/openoffice.org1.1/<br/>
 http://planetmirror.com/pub/OpenOffice/contrib/dictionaries/<br/>
-http://planetmirror.com/pub/OpenOffice/contrib/dictionaries/<br/>
-http://ftp.riken.go.jp/pub/FreeBSD/distfiles/openoffice/<br/>
-http://ftp.riken.go.jp/pub/FreeBSD/distfiles/openoffice/<br/>
-http://openoffice.mirror.wrpn.net/contrib/dictionaries/<br/>
-http://openoffice.mirror.wrpn.net/contrib/dictionaries/<br/>
 </p>
 
 <h3>Installare a mano i nuovi dizionari ortografici</h3>
@@ -218,7 +204,7 @@ http://openoffice.mirror.wrpn.net/contrib/dictionaries/<br/>
 
 <p>Scaricare i file .dic e .aff del dizionario che si desidera utilizzare e posizionarli in questa cartella.</p>
 
-<p>Oltre a essere disponibili dai depositi indicati sopra, i dizionari ortografici sono disponibili come parte delle installazioni di LibreOffice e OpenOffice. LibreOffice e le versioni più recenti di OpenOffice ora usano il formato delle &quot;estensioni&quot; per questi dizionari, in cui i file sono forniti in un archivio compresso con estensione .oxt. Per utilizzare dizionari ortografici in questo formato, rinominare l'estensione del file da .oxt a .zip e usare un'applicazione di compressione (tipo WinZip) per estrarre i file .dic e .aff.</p>
+<p>Oltre a essere disponibili dai depositi indicati sopra, i dizionari ortografici sono disponibili come parte delle installazioni di LibreOffice e OpenOffice. LibreOffice e le versioni più recenti di OpenOffice ora usano il formato delle "estensioni" per questi dizionari, in cui i file sono forniti in un archivio compresso con estensione .oxt. Per utilizzare dizionari ortografici in questo formato, rinominare l'estensione del file da .oxt a .zip e usare un'applicazione di compressione (tipo WinZip) per estrarre i file .dic e .aff.</p>
 
 <p>I nomi dei file devono corrispondere esattamente al codice lingua della lingua di destinazione, come definito nella finestra di dialogo Proprietà... del progetto (Progetto &gt; Proprietà...). Ad esempio, se avete selezionato ES-MX (spagnolo messicano) come lingua di destinazione, i file di dizionario devono essere denominati es_MX.dic ed es_MX.aff. Se si dispone solo di un dizionario spagnolo boliviano, con i nomi file es_BO.dic ed es_BO.aff, è possibile rinominare file in es_MX.dic ed es_MX.aff: il dizionario ortografico funzionerà (naturalmente, i controlli saranno eseguiti per lo spagnolo boliviano anziché quello messicano!)</p>
 
@@ -231,7 +217,7 @@ http://openoffice.mirror.wrpn.net/contrib/dictionaries/<br/>
 <p>Verificare che i file .dic e .aff per la lingua richiesta siano presenti nella cartella del dizionario di ortografia e che i loro nomi corrispondano esattamente al codice di lingua di destinazione.</p>
 
 
-<p>Copyright Marc Prior 2009-2011 </p>
+<p>Copyright Marc Prior 2009-2011  </p>
 
 </div>
 
@@ -245,7 +231,7 @@ http://openoffice.mirror.wrpn.net/contrib/dictionaries/<br/>
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>Connect</h4>
+        <h4>Connetti</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -261,15 +247,15 @@ http://openoffice.mirror.wrpn.net/contrib/dictionaries/<br/>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
-            <li><a href="/it/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manual</a></li>
-            <li><a href="/it/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Tutorials</a></li>
-            <li><a href="/it/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> How-To</a></li>
-            <li><a href="/it/reviews"><span class="glyphicon glyphicon-heart"></span> Recensioni di OmegaT</a></li>
+            <li><a href="/it/documentation#manual"><span class="glyphicon glyphicon-book"></span> Manuale</a></li>
+            <li><a href="/it/documentation#tutorials"><span class="glyphicon glyphicon-user"></span> Esercitazioni</a></li>
+            <li><a href="/it/documentation#howto"><span class="glyphicon glyphicon-question-sign"></span> Guide all'uso</a></li>
+            <li><a href="/it/reviews"><span class="glyphicon glyphicon-heart"></span> Recensioni</a></li>
           </ul>
         </div>
       </div>
       <div class="col-sm-2 footer-column">
-        <h4>The OmegaT Project</h4>
+        <h4>Il progetto OmegaT</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
@@ -277,7 +263,7 @@ http://openoffice.mirror.wrpn.net/contrib/dictionaries/<br/>
             <a href="/it/contact"><span class="glyphicon glyphicon-envelope"></span> Contatti e supporto</a>
             </li>
             <li>
-            <a href="/it/about"><span class="glyphicon glyphicon-question-sign"></span> Chi siamo</a>
+            <a href="/it/about"><span class="glyphicon glyphicon-question-sign"></span> Informazioni su</a>
             </li>
             <li>
             <a href="/it/philosophy"><span class="glyphicon glyphicon-console"></span> Filosofia</a>
