--- a/uk/howtos/compatibility.html
+++ b/uk/howtos/compatibility.html
@@ -388,7 +388,7 @@ bilingual files to users of Déjà Vu DVX, who are then able to edit them furthe
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>OmegaT в мережі</h4>
+        <h4>OmegaT у мережі</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
