--- a/uk/howtos/google_translate.html
+++ b/uk/howtos/google_translate.html
@@ -252,7 +252,7 @@ characters). You can check the daily usage from your Google account. In the uppe
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>OmegaT в мережі</h4>
+        <h4>OmegaT у мережі</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
