--- a/uk/howtos/iceni_infix.html
+++ b/uk/howtos/iceni_infix.html
@@ -221,7 +221,7 @@ Remove the line break. Then save the changes and re-export the PDF to the XML fi
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>OmegaT в мережі</h4>
+        <h4>OmegaT у мережі</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
