--- a/uk/howtos/localizing_omegat.html
+++ b/uk/howtos/localizing_omegat.html
@@ -298,7 +298,7 @@ the GPL (GNU Public License) or the GFDL (GNU Free Documentation License). First
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>OmegaT в мережі</h4>
+        <h4>OmegaT у мережі</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
