--- a/uk/howtos/preview.html
+++ b/uk/howtos/preview.html
@@ -259,7 +259,7 @@ Chrome is also available for all platforms. <a href="https://www.google.com/chro
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>OmegaT в мережі</h4>
+        <h4>OmegaT у мережі</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
