--- a/uk/howtos/priorview.html
+++ b/uk/howtos/priorview.html
@@ -309,7 +309,7 @@ For LibreOffice+Unoconv:<br/>
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>OmegaT в мережі</h4>
+        <h4>OmegaT у мережі</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
