--- a/uk/howtos/text_export.html
+++ b/uk/howtos/text_export.html
@@ -294,7 +294,7 @@ selection.txt	- contains the text highlighted by the user, when Ctrl-Shift-C is 
   </a>
   <div class="container-fluid">
       <div class="col-sm-offset-3 col-sm-2 footer-column">
-        <h4>OmegaT в мережі</h4>
+        <h4>OmegaT у мережі</h4>
         <div class="header-line"><!----></div>
         <div class="footer-links">
           <ul>
